test/test027.compil.error
test/test027.test:2:7: error: syntax error, unexpected unknown token, expecting end of instruction
echo 6 $ + 7
       ^

